Improved the groupchat highlighting with extra menu features, including less code when determining messages. Improved the gateway images to fit better with the new design. Improved the button backgrounds to some extent.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@10373 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -430,6 +430,8 @@ menuitem.add.as.contact = Add as a contact
 menuitem.add.contact = Add Contact
 menuitem.add.contact.group = Add Contact Group
 menuitem.add.group.highlighting = Highlight my name in group chats
+menuitem.add.groupchat.myname = Highlight my name when someone says it
+menuitem.add.groupchat.mytext = Highlight my text when i say something
 menuitem.alert.when.online = Alert when user is available
 menuitem.ban = Ban
 menuitem.ban.user = Ban User
@@ -801,6 +803,7 @@ title.find.contacts = Find Contacts
 title.gadugadu.registration = GaduGadu Account Credentials
 title.general.chat.settings = General Chat Settings
 title.group.chat = Group Chat
+title.group.chat.settings = Group Chat Settings
 title.gtalk.registration = GTalk Account Credentials
 title.history.for = Conversation History For {0}
 title.icq.registration = ICQ Account Credentials
