[SPARK-1009] Make gateway icons more transparent to fit with new theme (fixed) [SPARK-1010] On toast popup from a MUC show the nickname of whoever said the comment (fixed, Daniel's request ;) ) [SPARK-1011] When someone says my name in an MUC, show a custom toast popup if enabled (fixed) Also the beginnings of linux system tray custom new message icon
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@10397 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -336,6 +336,8 @@ group.notification.options = Notification Options
 group.offline = Offline Group
 group.search.form = Search Form
 group.search.results = Search Results
+group.chat.name.notification = Some said your name...
+group.chat.name.match = Your name has been said in group chat:
 
 label.accounts = &Accounts
 label.add.conference.service = &Add Conference Service
@@ -431,6 +433,7 @@ menuitem.add.contact = Add Contact
 menuitem.add.contact.group = Add Contact Group
 menuitem.add.groupchat.myname = Highlight my name when someone says it
 menuitem.add.groupchat.mytext = Highlight my text when i say something
+menuitem.add.groupchat.popname= Show custom toaster popup when someone says my name
 menuitem.alert.when.online = Alert when user is available
 menuitem.ban = Ban
 menuitem.ban.user = Ban User
