--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -336,7 +336,7 @@ group.notification.options = Notification Options
 group.offline = Offline Group
 group.search.form = Search Form
 group.search.results = Search Results
-group.chat.name.notification = Some said your name...
+group.chat.name.notification = Seen your name...
 group.chat.name.match = Your name has been said in group chat:
 
 label.accounts = &Accounts
