Joona Kannisto: [SPARK-1024] Added finish translation
Michael Will:
[SPARK-409] option to disable the password change fields
[SPARK-952] Links will not open from chat windows under Linux
[SPARK-1023] Add remove button to call history

David Schuster:
[SPARK-671] hide "show chat history" button if chat history is disabled
[SPARK-431] add "Save / Apply" and a "Cancel" button to Preferences Dialog
[SPARK-954] Need an option to disable showing previous conversation in chat window
[SPARK-975] Add an option to delete entries in Tasks permanently

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@10652 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -200,11 +200,16 @@
 ##     Added key: 'label.contactlist.avatarsize'
 ##     Added key: 'title.qq.registration'
 ##     Added key: 'message.enter.qq'
+##
+## 2.6.0
+##
+## 	   Added key: 'apply'
 
 accept = Accept
 active = Active
 add = Add
 answer = Answer
+apply = Apply
 available = Available
 broadcast = Broadcast
 cancel = Cancel
@@ -295,6 +300,7 @@ checkbox.allow.buzz = Allow users to buz&z you.
 checkbox.auto.discover.port = &Automatically discover host and port
 checkbox.auto.login = &Auto Login
 checkbox.disable.chat.history = &Disable Chat History
+checkbox.disable.prev.chat.history = &Disable showing previous conversation in chat
 checkbox.enable.emoticons = Enable Em&oticons
 checkbox.idle.enabled = &Idle Enabled
 checkbox.launch.on.startup = &Launch on Startup
