Guus der Kinderen: [SPARK-1027] Prevent duplicate conferences
Niklas Schaefer:
[SPARK-667] Spark should only transform first /me
[SPARK-943] Add an option to read and copy contact's status message
[SPARK-980] Add an option to disable vcard popups
[SPARK-963] Should be an option to switch to 24h time format in chat window
[SPARK-930] Offline contacts in broadcast window
[SPARK-959] Broadcast dialog input field should do text wrapping
* Minor text area improvements.

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@10743 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -514,6 +514,7 @@ menuitem.view.logs = View Logs
 menuitem.view.profile = View Profile
 menuitem.view.room.info = View Room Info
 menuitem.voice = Voice
+menuitem.show.offline.users = Show offline Users
 
 message = &Message
 message.account.create = Create a new chat account.
@@ -870,6 +871,7 @@ title.view.room.information = View Room Information
 title.waiting.to.call = Waiting to place call
 title.xmpp.registration = XMPP Account Credentials
 title.yahoo.registration = Yahoo Account Credentials
+title.appearance.showVCards = Show VCards in the Contactlist
 
 tooltip.appearance = Change the appearance of your conversations.
 tooltip.file.transfer = Preferences for File Transfer.
