--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -102,14 +102,26 @@
 ##
 ## 2.5.2
 ##     Added key: 'menuitem.user.guide'
-##
-##
-##
+##	   Added key: 'apply'
+##	   Added key: 'checkbox.notify.user.comes.online'
+##     Added key: 'checkbox.notify.user.goes.offline'
+##	   Added key: 'label.contactlist.fontsize'
+##     Added key: 'label.chatroom.fontsize'
+##     Added key: 'checkbox.show.avatars.in.contactlist'
+##     Added key: 'label.contactlist.avatarsize'
+##	   Added key: 'menuitem.add.groupchat.myname'
+##     Added key: 'menuitem.add.groupchat.mytext'
+##     Added key: 'menuitem.add.groupchat.popname'
+##	   Added key: 'title.group.chat.settings'
+##	   Added key: 'menuitem.view.logs'
+##	   Added key: 'title.appearance.preferences'
+
 
 
 
 
 ok = Ok
+apply = Übernehmen
 cancel = Abbrechen
 add = Hinzufügen
 use.default = Voreinstellungen laden
@@ -135,12 +147,13 @@ yes = Ja
 no = Nein
 broadcast = Rundnachricht
 available = Anwesend
+
 user.has.signed.in = hat sich eingeloggt.
 user.has.signed.off = hat sich ausgeloggt.
 
 
 button.create.account = &Account Erstellen
-button.close = &Schließen
+button.close = Schließen
 button.advanced = &Erweitert
 button.browse = &Anzeigen...
 button.browse2 = A&nzeigen...
@@ -178,8 +191,6 @@ button.start.chat = Chat
 button.send.email = Email
 button.send = Senden
 
-
-
 checkbox.save.password = &Passwort speichern
 checkbox.auto.login = &Automatisches Login
 checkbox.use.proxy.server = &Proxy Server benutzen
@@ -190,6 +201,7 @@ checkbox.show.time.in.chat.window = &Zeit im Chatfenster anzeigen
 checkbox.perform.spell.check = &Automatische Rechtschreibprüfung durchführen
 checkbox.show.notifications.in.conference = &Anzeigen von Benachrichtigungen in Konferenzräumen
 checkbox.disable.chat.history = &Den Chatverlauf nicht speichern
+checkbox.disable.prev.chat.history = Die letzte Unterhaltung nicht anzeigen
 checkbox.show.toaster = Informationen in einem &Popup anzeigen
 checkbox.window.to.front = &Fenster in den Vordergrund bringen
 checkbox.play.sound.on.new.message = Klang abspielen wenn eine neue Nachricht &eintrifft
@@ -201,10 +213,13 @@ checkbox.launch.on.startup = &Spark bei Systemstart ausführen
 checkbox.start.in.tray = &Spark automatisch in der Taskleiste starten
 checkbox.split.chat.window = &Fenster 'andocken' (benötigt Neustart von Spark)
 checkbox.tabs.on.top = &Chat tabs oben anzeigen (benötigt Neustart von Spark)
-checkbox.allow.buzz = "Buz&zer" Funktion aktivieren.
+checkbox.allow.buzz = "Buzzer" Funktion aktivieren.
 checkbox.enable.emoticons = Em&oticons aktivieren 
 checkbox.use.system.look.and.feel = System Look And &Feel verwenden (benötigt Neustart von Spark)
-
+checkbox.notify.user.comes.online = Benachrichtigen, wenn ein User Online kommt
+checkbox.notify.user.goes.offline = Benachrichtigen, wenn ein User Offline geht
+checkbox.show.avatars.in.contactlist = Zeige Avatars in der Kontaktliste
+checkbox.broadcast.hide.offline.user = Offline User ausblenden
 
 label.user.on.public.network = Teilnehmer befindet sich in einem öffentlichen Netzwerk
 label.change.password.to = &Neues Passwort eingeben
@@ -284,6 +299,9 @@ label.unable.to.add.contact = Kann Kontakt nicht hinzufügen.
 label.conflict.error = User ist bereits Angemeldet. Login wird verweigert.
 label.message.style = &Nachrichten Style
 label.emoticons = &Emoticons
+label.contactlist.fontsize = Kontaktliste Schriftgröße:
+label.chatroom.fontsize = Chatroom Schriftgröße:
+label.contactlist.avatarsize = Kontaktliste Avatargröße:
 
 message.username.error = Wählen Sie einen Benutzernamen für diesem Account.
 message.password.error = Wähle Sie Passwort für diesem Account.
@@ -512,6 +530,7 @@ title.conference.rooms = Konferenzräume
 title.invite.to.conference = Zu einer Konferenz einladen
 title.room.information = Raum Informationen
 title.change.nickname = Angezeigten Name ändern
+title.group.chat.settings = Konferenz Einstellungen
 title.group.chat = Konfernz
 title.create.or.bookmark.room = Raum als Lesezeichen setzen oder dem Raum beitreten
 title.browse.room.service = Liste der Konferenzen - {0}
@@ -581,7 +600,8 @@ title.add.contact.group = Neue Kontakt Gruppe hinzufügen
 title.add.contact = Neuen Kontakt hinzufügen
 title.file.transfer.preferences = Datei Transfer Einstellungen
 title.file.transfer = Datei Transfer
-
+title.appearance.preferences = Anpassung
+title.appearance.showVCards = Zeige VCards in der Kontaktliste
 
 menuitem.contacts = Kontakte
 menuitem.actions = Aktionen
@@ -623,6 +643,7 @@ menuitem.join.room = Raum beitreten
 menuitem.remove.bookmark = Lesezeichen entfernen
 menuitem.join.on.startup = Beim Starten beitreten
 menuitem.view.room.info = Rauminformationen anzeigen
+menuitem.view.logs = Logs anzeigen
 menuitem.remove = Entfernen
 menuitem.change.nickname = Angezeigten Namen ändern
 menuitem.block.user = Teilnehmer blockieren
@@ -647,6 +668,7 @@ menuitem.remove.alert.when.online = Benachrichtigung entfernen
 menuitem.save.as = Speichern als...
 menuitem.view.client.version = Programm Version anzeigen
 menuitem.view.contact.history = Kontaktverlauf anzeigen
+menuitem.show.contact.statusmessage = Statusnachricht anzeigen
 menuitem.edit.my.profile = &Profil ändern...
 menuitem.lookup.profile = &Profil suchen...
 menuitem.add.as.contact = Als Kontakt hinzufügen
@@ -660,6 +682,10 @@ menuitem.show.offline.group = Offline User gruppieren
 menuitem.move.to = Verschieben nach
 menuitem.copy.to = Kopieren nach
 menuitem.user.guide = Benutzerhandbuch
+menuitem.add.groupchat.myname  = Meinen Namen hervorheben, wenn ihn jemand schreibt
+menuitem.add.groupchat.mytext  = Meinen Text hervorheben, wenn ich etwas schreibe
+menuitem.add.groupchat.popname = Zeige ein Popup, wenn jemand meinen Namen schreibt
+menuitem.show.offline.users = Zeige Offline User
 
 tree.conference.services = Konferenzen
 tree.users.in.room = Teilnehmer im Raum
