Fixed thanks to GRK: [SPARK-467] Persist search information when doing user searches on multiple search services.
Fixed thanks to Niklas Schaefer:
[SPARK-413]improve display of buttons in "Browse Conference Rooms"
[SPARK-1018] Add options to expand and collapse all groups together

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@10753 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -325,6 +325,7 @@ checkbox.use.compression = Use Co&mpression
 checkbox.use.proxy.server = &Use Proxy Server
 checkbox.use.system.look.and.feel = Use System Look And &Feel (Requires restart)
 checkbox.window.to.front = &Bring window to front
+checkbox.broadcast.hide.offline.user = hide offline user
 
 delete.log.permanently = Permanently delete log
 delete.permanently = Permanently delete?
@@ -514,9 +515,14 @@ menuitem.view.logs = View Logs
 menuitem.view.profile = View Profile
 menuitem.view.room.info = View Room Info
 menuitem.voice = Voice
-menuitem.show.offline.users = Show offline Users
+menuitem.show.offline.users = show offline users
+menuitem.show.contact.statusmessage = show statusmessage
+menuitem.join.room = Join Selected Room
+menuitem.bookmark.room = Bookmark Room
+menuitem.refresh = Refresh
+menuitem.create.room = Create or Join Room
 
-message = &Message
+message = Message
 message.account.create = Create a new chat account.
 message.account.created = New account has been created.
 message.account.error = Specify the server to create the account on.
