Fixed by Hawke: [SPARK-1029] Clicking the information button will send the chat text field [SPARK-1028] Spark is still showing null avatars/display pictures
Some small improvements, capitalised "show offline users" along with modifying the support versions to support an actual real build number. Also changed Spark version in accordance with the release of Beta 2.

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@10809 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -515,7 +515,7 @@ menuitem.view.logs = View Logs
 menuitem.view.profile = View Profile
 menuitem.view.room.info = View Room Info
 menuitem.voice = Voice
-menuitem.show.offline.users = show offline users
+menuitem.show.offline.users = Show offline users
 menuitem.show.contact.statusmessage = show statusmessage
 menuitem.join.room = Join Selected Room
 menuitem.bookmark.room = Bookmark Room
