Fixes by Niklas Schaefer: [SPARK-960] Spark does not remember group state. [SPARK-1032] Improve the downloading class
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@10832 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -291,6 +291,7 @@ button.send.email = Email
 button.start.chat = Chat
 button.tasks.active = Active
 button.tasks.all = All
+button.unset.file.explorer = Unset File Browser
 button.update = &Update
 button.view.notes = View Notes
 button.view.profile = View Full Profile
@@ -367,6 +368,7 @@ label.country = C&ountry
 label.create.account = Create &Account
 label.department = &Department
 label.dial = &Dial
+label.downloads = Downloads
 label.due = Due
 label.email.address = &Email Address
 label.emoticons = &Emoticons
@@ -478,6 +480,7 @@ menuitem.lookup.profile = &Lookup Profile...
 menuitem.move.to = Move to
 menuitem.online.help = Spark Forums
 menuitem.open = Open
+menuitem.open.with = Open with...
 menuitem.plugins = &Plugins
 menuitem.preferences = Preferences
 menuitem.remove = Remove
@@ -801,6 +804,7 @@ title.create.new.account = Create New Account
 title.create.or.bookmark.room = Join or Bookmark Room
 title.create.or.join = Create/Join
 title.create.problem = Account Creation Problem
+title.delete.file = Do you really want to delete this File?
 title.dial.phone = Dial Phone
 title.disable.transport = Remove Login Information
 title.download.complete = Download Complete
@@ -810,6 +814,12 @@ title.edit.custom.message = Edit Custom Messages
 title.edit.profile = Edit Profile Information
 title.enter.reason = Enter Reason
 title.error = Error
+title.error.couldnt.open.file = Could not open the file! Maybe unknown filetype!
+title.error.delete.file = Could not delete file!
+title.error.find.app = Could not find a matching application!
+title.error.rename.file = Could not rename the file!
+title.file = File
+title.filesize = Size
 title.file.exists = File Exists
 title.file.transfer = File Transfer
 title.file.transfer.preferences = File Transfer Preferences
@@ -824,6 +834,9 @@ title.history.for = Conversation History For {0}
 title.icq.registration = ICQ Account Credentials
 title.irc.registration = IRC Account Credentials
 title.incoming.call = Incoming Call
+title.input.fileexplorer = Please input the name of your File Browser:
+title.input.newname = Please input the new name: 
+title.input.openwith = Please input the name of the application which you want to use:
 title.invite.to.conference = Invite To Conference
 title.jabber.browser = Browser
 title.join.conference.room = Join Conference Room
