add missing i18n keys
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@10964 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -524,6 +524,8 @@ menuitem.join.room = Join Selected Room
 menuitem.bookmark.room = Bookmark Room
 menuitem.refresh = Refresh
 menuitem.create.room = Create or Join Room
+menuitem.expand.all.groups = Expand all Groups
+menuitem.collapse.all.groups = Collapse all Groups
 
 message = Message
 message.account.create = Create a new chat account.
@@ -892,6 +894,7 @@ title.xmpp.registration = XMPP Account Credentials
 title.yahoo.registration = Yahoo Account Credentials
 title.appearance.showVCards = Show VCards in the Contactlist
 
+tooltip.place.a.call = Place a call to this individual
 tooltip.appearance = Change the appearance of your conversations.
 tooltip.file.transfer = Preferences for File Transfer.
 tooltip.notifications = Notification preferences for incoming chats.
