add new features SPARK-971  - System Tray notification about incoming messages SPARK-972  - Typing Notification in System Tray
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@10991 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -307,6 +307,8 @@ checkbox.idle.enabled = &Idle Enabled
 checkbox.launch.on.startup = &Launch on Startup
 checkbox.notify.user.comes.online = Notify when a user comes online
 checkbox.notify.user.goes.offline = Notify when a user goes offline
+checkbox.notify.typing.systemtray = Show typing notification in the systemtray
+checkbox.notify.systemtray = Show new messages in the systemtray
 checkbox.permanent = Room is &permanent
 checkbox.play.sound.on.invitation = Play sound when &invitation is received
 checkbox.play.sound.on.new.message = Play sound when new message &arrives
