--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -218,6 +218,8 @@ checkbox.enable.emoticons = Em&oticons aktivieren
 checkbox.use.system.look.and.feel = System Look And &Feel verwenden (benötigt Neustart von Spark)
 checkbox.notify.user.comes.online = Benachrichtigen, wenn ein User Online kommt
 checkbox.notify.user.goes.offline = Benachrichtigen, wenn ein User Offline geht
+checkbox.notify.typing.systemtray = Zeige Schreibhinweise im System Tray 
+checkbox.notify.systemtray = Zeige neue Nachrichten im System Tray
 checkbox.show.avatars.in.contactlist = Zeige Avatars in der Kontaktliste
 checkbox.broadcast.hide.offline.user = Offline User ausblenden
 
