move from jmf to fmj update jain-sip to the latest 1.2.102 fix error on install in izpack add MediaPreference start video support for sip
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11038 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -829,6 +829,7 @@ title.file.transfer.preferences = File Transfer Preferences
 title.find.conference.service = Find Conference Service
 title.find.contacts = Find Contacts
 title.gadugadu.registration = GaduGadu Account Credentials
+title.general.media = Media Settings
 title.general.chat.settings = General Chat Settings
 title.group.chat = Group Chat
 title.group.chat.settings = Group Chat Settings
