SPARK-1072 - Add an option to make chat window always stay on top
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11088 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -444,6 +444,7 @@ menuitem.add.contact.group = Add Contact Group
 menuitem.add.groupchat.myname = Highlight my name when someone says it
 menuitem.add.groupchat.mytext = Highlight my text when i say something
 menuitem.add.groupchat.popname= Show custom toaster popup when someone says my name
+menuitem.always.on.top = Always on Top
 menuitem.alert.when.online = Alert when user is available
 menuitem.ban = Ban
 menuitem.ban.user = Ban User
