--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -701,29 +701,14 @@ menuitem.add.groupchat.popname = Zeige ein Popup, wenn jemand meinen Namen schre
 menuitem.show.offline.users = Zeige Offline User
 menuitem.expand.all.groups = ÷ffne alle Gruppen
 menuitem.collapse.all.groups = Schlieﬂe alle Gruppen
-<<<<<<< .mine
-menuitem.join.room = Ausgew‰hlten Raum betreten
-menuitem.bookmark.room = Raum als Lesezeichen setzen
-menuitem.refresh = Aktualisieren
-menuitem.create.room = Raum erstellen oder beitreten
-
-
-=======
+menuitem.always.on.top = Immer im Vodergrund
 menuitem.join.room = Ausgew‰hlten Raum betreten
 menuitem.bookmark.room = Raum als Lesezeichen setzen
 menuitem.refresh = Aktualisieren
 menuitem.create.room = Raum erstellen oder beitreten
 menuitem.expand.all.groups = ÷ffne alle Gruppen
 menuitem.collapse.all.groups = Schlieﬂe alle Gruppen
->>>>>>> .theirs
 
-<<<<<<< .mine
-
-
-=======
-
-
->>>>>>> .theirs
 tree.conference.services = Konferenzen
 tree.users.in.room = Teilnehmer im Raum
 
