SPARK-1072 - Add an option to make chat window always stay on top
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11089 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -529,6 +529,8 @@ menuitem.create.room = Create or Join Room
 menuitem.expand.all.groups = Expand all Groups
 menuitem.collapse.all.groups = Collapse all Groups
 
+menuitem.chatframe.option = Options
+
 message = Message
 message.account.create = Create a new chat account.
 message.account.created = New account has been created.
