--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -709,6 +709,8 @@ menuitem.create.room = Raum erstellen oder beitreten
 menuitem.expand.all.groups = ÷ffne alle Gruppen
 menuitem.collapse.all.groups = Schlieﬂe alle Gruppen
 
+menuitem.chatframe.option = Einstellungen
+
 tree.conference.services = Konferenzen
 tree.users.in.room = Teilnehmer im Raum
 
