add myspace, facebook and sametime fix warnings
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11158 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -591,6 +591,9 @@ message.enter.gadugadu = Enter your GaduGadu username and password below.
 message.enter.gtalk = Enter your GTalk username and password below.
 message.enter.icq = Enter your ICQ username and password below.
 message.enter.irc = Enter your IRC username, password, and nickname below.
+message.enter.sametime = Enter your Sametime username and password below. 
+message.enter.facebook = Enter your Facebook username and password below.
+message.enter.myspace = Enter your MySpace username and password below. 
 message.enter.jabber.id = Enter Jabber ID
 message.enter.message.to.broadcast = Enter message to broadcast to your entire roster list.
 message.enter.msn = Enter your MSN username and password below.
@@ -841,6 +844,9 @@ title.gtalk.registration = GTalk Account Credentials
 title.history.for = Conversation History For {0}
 title.icq.registration = ICQ Account Credentials
 title.irc.registration = IRC Account Credentials
+title.sametime.registration = Sametime Account Credentials
+title.facebook.registration = Facebook Account Credentials
+title.myspace.registration = MySpace Account Credentials
 title.incoming.call = Incoming Call
 title.input.fileexplorer = Please input the name of your File Browser:
 title.input.newname = Please input the new name: 
