--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -453,6 +453,9 @@ message.enter.aim = Geben Sie ihr AIM Login und Passwort ein.
 message.enter.msn = Geben Sie ihr MSN Login und Passwort ein.
 message.enter.yahoo = Geben Sie Ihr Login und Passwort für Yahoo ein.
 message.enter.icq = Geben Sie Ihr Login und Passwort für ICQ ein.
+message.enter.sametime = Geben Sie Ihr Login und Passwort für Sametime ein.
+message.enter.facebook = Geben Sie Ihr Login und Passwort für Facebook ein.
+message.enter.myspace = Geben Sie Ihr Login und Passwort für MySpace ein.
 message.username.password.error = Benutzername und/oder Passwort muss eingegeben werden.
 message.registration.transport.failed = Registrierung mit dem Transportprotokoll schlug fehl.
 message.client.information = Programminformationen für {0}
@@ -563,6 +566,9 @@ title.aim.registration = AIM Registrierung
 title.msn.registration = MSN Registrierung
 title.yahoo.registration = Yahoo Registrierung
 title.icq.registration = ICQ Registrierung
+title.facebook.registration = Facebook Registrierung
+title.myspace.registration = MySpace Registrierung
+title.sametime.registration = Sametime Registrierung
 title.registration.error = Fehler in der Registrierung
 title.jabber.browser = Browser
 title.version.and.time = Version und Zeit
