SPARK-1077 - Bookmarks menu on the main menu fixed
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11160 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -435,8 +435,10 @@ label.version = &Version
 label.web.page = &Web Page
 label.xmpp.port = &XMPP Port
 
+
 menuitem.about = About
 menuitem.actions = Actions
+menuitem.bookmarks = Bookmarks
 menuitem.add = Add
 menuitem.add.as.contact = Add as a contact
 menuitem.add.contact = Add Contact
@@ -782,6 +784,7 @@ tab.proxy = Proxy
 
 title.about = About
 title.account.create.registration = Account Registration
+title.bookmarks = Bookmarks
 title.account.created = Account Created
 title.add.contact = Add Contact
 title.add.contact.group = Add Contact Group
