--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -620,9 +620,11 @@ title.file = Datei
 title.filesize = Dateigröße
 title.error.delete.file = Datei konnte nicht gelöscht werden!
 title.error.couldnt.open.file = Datei konnte nicht geöffnet werden! Eventuell Dateityp unbekannt!
+title.bookmarks = Lesezeichen
 
 menuitem.contacts = Kontakte
 menuitem.actions = Aktionen
+menuitem.bookmarks = Lesezeichen
 menuitem.exit = Beenden
 menuitem.plugins = &Plugins
 menuitem.logout.no.status = Ausloggen
