SPARK-1077 - Advanced Connection Preferences , SSO and PKI and Start Debugger
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11166 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -324,10 +324,15 @@ checkbox.split.chat.window = Dock &Windows (Requires restart)
 checkbox.start.in.tray = &Start in System Tray
 checkbox.tabs.on.top = &Chat tabs appear on top (Requires restart)
 checkbox.use.compression = Use Co&mpression
+checkbox.use.debugger.on.startup = Start &Debugger on startup
 checkbox.use.proxy.server = &Use Proxy Server
 checkbox.use.system.look.and.feel = Use System Look And &Feel (Requires restart)
 checkbox.window.to.front = &Bring window to front
 checkbox.broadcast.hide.offline.user = hide offline user
+checkbox.use.krbconf = Use krb5.conf or krb5.ini
+checkbox.use.krb.dns = Use DNS
+checkbox.use.specify.below = Specify Below
+checkbox.use.pki.authentication = &Use PKI Authentication
 
 delete.log.permanently = Permanently delete log
 delete.permanently = Permanently delete?
@@ -434,7 +439,11 @@ label.username = &Username
 label.version = &Version
 label.web.page = &Web Page
 label.xmpp.port = &XMPP Port
-
+label.krb.realm = Realm
+label.krb.kdc = KDC
+label.which.pki.method = Which PKI Method?
+label.choose.file = Choose File
+label.trust.store.password = Trust Store Password
 
 menuitem.about = About
 menuitem.actions = Actions
@@ -781,8 +790,11 @@ tab.home = Home
 tab.installed.plugins = Installed Plugins
 tab.personal = Personal
 tab.proxy = Proxy
+tab.sso = SSO
+tab.pki = PKI
 
 title.about = About
+title.advanced.connection.preferences = Advanced Connection Preferences
 title.account.create.registration = Account Registration
 title.bookmarks = Bookmarks
 title.account.created = Account Created
@@ -793,6 +805,7 @@ title.add.search.service = Add Search Service
 title.add.to.roster = Add To Roster
 title.address = Address
 title.advanced.connection.preferences = Advanced Connection Preferences
+title.advanced.connection.usesso = &Use Single Sign-On (SSO) via GSSAPI
 title.alert = Alert
 title.appearance = Appearance
 title.appearance.preferences = Customization
