--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -222,6 +222,12 @@ checkbox.notify.typing.systemtray = Zeige Schreibhinweise im System Tray
 checkbox.notify.systemtray = Zeige neue Nachrichten im System Tray
 checkbox.show.avatars.in.contactlist = Zeige Avatars in der Kontaktliste
 checkbox.broadcast.hide.offline.user = Offline User ausblenden
+checkbox.use.debugger.on.startup = Debugger beim Starten öffnen
+checkbox.use.compression = Komprimierung verwenden 
+checkbox.use.krbconf = Verwende krb5.conf oder krb5.ini
+checkbox.use.krb.dns = Verwende DNS
+checkbox.use.specify.below = Specify Below
+checkbox.use.pki.authentication = Verwende PKI Authentifizierung
 
 label.user.on.public.network = Teilnehmer befindet sich in einem öffentlichen Netzwerk
 label.change.password.to = &Neues Passwort eingeben
@@ -304,6 +310,12 @@ label.emoticons = &Emoticons
 label.contactlist.fontsize = Kontaktliste Schriftgröße:
 label.chatroom.fontsize = Chatroom Schriftgröße:
 label.contactlist.avatarsize = Kontaktliste Avatargröße:
+label.krb.realm = Realm
+label.krb.kdc = KDC
+label.which.pki.method = Welche PKI Methode?
+label.choose.file = Datei auswählen
+label.trust.store.password = Trust Store Passwort
+
 
 message.username.error = Wählen Sie einen Benutzernamen für diesem Account.
 message.password.error = Wähle Sie Passwort für diesem Account.
@@ -507,6 +519,7 @@ message.buzz.alert.notification = Sich beim Benutzer bemerkbar machen.
 message.buzz.sent = 'Buzzer' Benachrichtigung an Benutzer gesendet.
 
 
+title.advanced.connection.preferences = Erweiterte Verbindungseinstellungen
 title.passwords.no.match = Passwörter stimmen nicht überein. Bitte Eingabe wiederholen.
 title.create.problem = Problem beim Anlegen eines Accounts
 title.account.created = Account erstellt
@@ -515,6 +528,7 @@ title.account.create.registration = Account Registrieren
 title.register.account = Neuen Account registrieren
 title.notification = Benachrichtigungen
 title.advanced.connection.preferences = Erweiterte Verbindungseinstellungen
+title.advanced.connection.usesso = Verwende Single Sign-ON (SSO) über GSSAPI
 title.preferences = Einstellungen
 title.error = Fehler
 title.status.message = Status Nachricht
@@ -733,6 +747,8 @@ tab.business = Geschäftlich
 tab.home = Privat
 tab.avatar = Avatar
 tab.conferences = Konferenzen
+tab.sso = SSO
+tab.pki = PKI
 
 group.connection = Verbindung
 group.conferences.found = Konferenzen gefunden
