SPARK-1077 - Client Logs
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11167 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -794,6 +794,7 @@ tab.sso = SSO
 tab.pki = PKI
 
 title.about = About
+title.client.logs = Client Logs
 title.advanced.connection.preferences = Advanced Connection Preferences
 title.account.create.registration = Account Registration
 title.bookmarks = Bookmarks
