--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -531,6 +531,7 @@ title.advanced.connection.preferences = Erweiterte Verbindungseinstellungen
 title.advanced.connection.usesso = Verwende Single Sign-ON (SSO) über GSSAPI
 title.preferences = Einstellungen
 title.error = Fehler
+title.client.logs = Client Logs
 title.status.message = Status Nachricht
 title.spark.preferences = Spark Einstellungen
 title.alert = Benachrichtigung
