--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -191,6 +191,7 @@ button.start.chat = Chat
 button.send.email = Email
 button.send = Senden
 button.unset.file.explorer = entferne gespeicherten File Browser
+button.view.profile = Gesamte Profile anzeigen
 
 checkbox.save.password = &Passwort speichern
 checkbox.auto.login = &Automatisches Login
