SPARK-1077 - GroupChat invite and broadcast dialog and task notification
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11170 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -250,6 +250,7 @@ action.save = Save
 action.select.all = Select All
 
 button.accept = &Accept
+button.reject = &Reject
 button.add = &Add
 button.add.a.contact = &Add A Contact
 button.add.bookmark = Add Bookmark
@@ -543,6 +544,7 @@ menuitem.collapse.all.groups = Collapse all Groups
 
 menuitem.chatframe.option = Options
 
+message.invite.to.groupchat = {0} is inviting you to join a group chat.
 message = Message
 message.account.create = Create a new chat account.
 message.account.created = New account has been created.
@@ -794,6 +796,7 @@ tab.sso = SSO
 tab.pki = PKI
 
 title.about = About
+title.task.notification = Task notification
 title.client.logs = Client Logs
 title.advanced.connection.preferences = Advanced Connection Preferences
 title.account.create.registration = Account Registration
