--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -518,7 +518,7 @@ message.room.creation.error = Der Raum kann nicht erstellt werden.
 message.unable.to.retrieve.last.activity = Keine letzte Aktivität für {0} vorhanden
 message.buzz.alert.notification = Sich beim Benutzer bemerkbar machen.
 message.buzz.sent = 'Buzzer' Benachrichtigung an Benutzer gesendet.
-
+message.invite.to.groupchat = Sie wurden von {0} zu einen Gruppen-Chat eingeladen
 
 title.advanced.connection.preferences = Erweiterte Verbindungseinstellungen
 title.passwords.no.match = Passwörter stimmen nicht überein. Bitte Eingabe wiederholen.
@@ -637,6 +637,7 @@ title.filesize = Dateigröße
 title.error.delete.file = Datei konnte nicht gelöscht werden!
 title.error.couldnt.open.file = Datei konnte nicht geöffnet werden! Eventuell Dateityp unbekannt!
 title.bookmarks = Lesezeichen
+title.task.notification = Task notification
 
 menuitem.contacts = Kontakte
 menuitem.actions = Aktionen
