SPARK-1077 - password dialog
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11171 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -445,6 +445,9 @@ label.krb.kdc = KDC
 label.which.pki.method = Which PKI Method?
 label.choose.file = Choose File
 label.trust.store.password = Trust Store Password
+label.enter.password = Enter Password
+label.move.focus.forwards = Move Focus Forwards
+label.move.focus.backwards = Move Focus Backwards
 
 menuitem.about = About
 menuitem.actions = Actions
