--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -316,7 +316,9 @@ label.krb.kdc = KDC
 label.which.pki.method = Welche PKI Methode?
 label.choose.file = Datei auswählen
 label.trust.store.password = Trust Store Passwort
-
+label.enter.password = Password eingeben
+label.move.focus.forwards = Move Focus Forwards
+label.move.focus.backwards = Move Focus Backwards
 
 message.username.error = Wählen Sie einen Benutzernamen für diesem Account.
 message.password.error = Wähle Sie Passwort für diesem Account.
