SPARK-1077 - more work on jingle
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11172 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/jingle/src/resources/i18n/jingle_i18n.properties
+++ b/src/plugins/jingle/src/resources/i18n/jingle_i18n.properties
@@ -1,1 +1,12 @@
-jingle.computer.to.computer = Computer To Computer
+button.accept = Accept
+button.reject = Reject
+
+label.voice.request.from = Voice chat request from ...
+label.mute.call = Mute this call.
+label.computer.to.computer = Computer To Computer
+label.mute = Mute
+label.unmute = Unmute
+label.establishing.call = Establishing call. Please wait...
+label.outgoing.voicechat = Outgoing Voice Chat To {0}
+label.call.ended = Call ended.
+label.call.transfer = Call transferred to {0}
