SPARK-1077 - menuitem.plugins
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11311 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -499,7 +499,7 @@ menuitem.move.to = Move to
 menuitem.online.help = Spark Forums
 menuitem.open = Open
 menuitem.open.with = Open with...
-menuitem.plugins = &Plugins
+menuitem.plugins = Plugins
 menuitem.preferences = Preferences
 menuitem.remove = Remove
 menuitem.remove.alert.when.online = Remove Alert
