--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -645,7 +645,7 @@ menuitem.contacts = Kontakte
 menuitem.actions = Aktionen
 menuitem.bookmarks = Lesezeichen
 menuitem.exit = Beenden
-menuitem.plugins = &Plugins
+menuitem.plugins = Plugins
 menuitem.logout.no.status = Ausloggen
 menuitem.logout.with.status = Ausloggen mit Nachricht
 menuitem.show.traffic = Verbindungsdaten
