SPARK-1077 - groupchat inivte again and remove
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11312 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -544,7 +544,7 @@ menuitem.refresh = Refresh
 menuitem.create.room = Create or Join Room
 menuitem.expand.all.groups = Expand all Groups
 menuitem.collapse.all.groups = Collapse all Groups
-
+menuitem.inivite.again = Invite Again
 menuitem.chatframe.option = Options
 
 message.invite.to.groupchat = {0} is inviting you to join a group chat.
