SPARK-1077 - groupchat password required
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11313 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -774,6 +774,7 @@ message.your.ownership.revoked = Your owner privilieges have been revoked.
 message.your.revoked.granted = Your admin privileges have been revoked.
 message.your.voice.granted = You have been given a voice in this chat.
 message.your.voice.revoked = Your voice has been revoked.
+message.groupchat.require.password = This group chat room requires a password to enter.
 
 status.available = Available
 status.away = Away
@@ -799,6 +800,7 @@ tab.sso = SSO
 tab.pki = PKI
 
 title.about = About
+title.password.required = Password Required
 title.task.notification = Task notification
 title.client.logs = Client Logs
 title.advanced.connection.preferences = Advanced Connection Preferences
