--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -354,6 +354,10 @@ group.search.results = Search Results
 group.chat.name.notification = Seen your name...
 group.chat.name.match = Your name has been said in group chat:
 
+label.na = n/a
+label.cell = Cell
+label.work = Work
+label.home = Home
 label.accounts = &Accounts
 label.add.conference.service = &Add Conference Service
 label.add.jid = &Add JID
