Apply small fixes from SPARK-1102 Patch
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11362 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -224,6 +224,7 @@ no = No
 not.registered = Not Registered
 occupants = Occupants
 offline = Offline
+online = Online
 ok = Ok
 online = online
 open = Open
